FC-105 - [fortress-web] - use valueOf instead of new